# open_rag

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
benchmarks/legacy/: BENCHMARK_REPORT.md  ONNX_VS_MOSS.md
benchmarks/reports/: int8_run1.json  int8_run2.json  int8_run3.json
data/quality/: beir_scifact_int8_hnsw.json  llm_judge_int8_top5.json
examples/: chatbot_minimal.py  chatbot_streaming.py
openrag/: __init__.py  app.py  bench.py  cli.py  config.py  embed.py  embed_onnx.py  engine.py  index.py  ingest.py  llm.py  pipeline.py  rerank.py  session.py  timer.py
scripts/: eval_beir.py  eval_llm_judge.py  quantize_onnx.py
scripts/legacy/: corpus_dup_check.py  recall_check.py  summarize_runs.py
static/: embed-demo.html  embed.js  index.html
