[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-rag"
version = "0.1.0"
description = "Fast, drop-in retrieval engine for RAG chatbots — ONNX INT8 + FAISS HNSW + cross-encoder rerank, with no quality loss."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["rag", "retrieval", "embeddings", "faiss", "onnx", "chatbot", "llm", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sse-starlette==2.1.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.2.1",
    "torch==2.4.1",
    "transformers==4.45.2",
    "faiss-cpu==1.9.0",
    "numpy==1.26.4",
    "groq==0.11.0",
    "pypdf==5.1.0",
    "markdown-it-py==3.0.0",
    "typer==0.13.1",
    "rich==13.9.4",
    "httpx==0.27.2",
]

[project.optional-dependencies]
onnx = [
    "optimum[onnxruntime]>=1.23",
    "onnxruntime>=1.19",
    "huggingface_hub>=0.24",
]

[project.scripts]
openrag = "openrag.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/open-rag"
Issues = "https://github.com/your-org/open-rag/issues"

[tool.setuptools.packages.find]
include = ["openrag*"]
exclude = ["data*", "scripts*", "examples*", "benchmarks*", "static*", "tests*"]
